syntax = "proto3";
package freym.projections.management;

message DeploySchemaRequest {
	int64 deployment_id = 1;
	string namespace = 2;
	repeated ObjectType projection_types = 3;
	repeated ObjectType crud_types = 4;
	repeated ObjectType nested_types = 5;
	repeated EnumType enum_types = 6;
	DeploymentOptions options = 7;
	repeated View views = 8;
	repeated View baseViews = 9;
}

message DeploySchemaResponse {}

message ActivateSchemaRequest {
	int64 deployment_id = 1;
}

message ActivateSchemaResponse {}

message ConfirmSchemaRequest {
	int64 deployment_id = 1;
}

message ConfirmSchemaResponse {}

message RollbackSchemaRequest {
	DeploymentTarget target = 1;
	string namespace = 2;
}

message RollbackSchemaByDeploymentRequest {
	int64 deployment_id = 1;
}

message RollbackSchemaResponse {}

message GetSchemaDeploymentRequest {
	int64 deployment_id = 1;
}

message GetSchemaDeploymentResponse {
	uint32 progress = 1;
}

message DeploymentOptions {
	DeploymentTarget target = 1;
	bool force = 2;
	repeated string force_types = 3;
}

enum DeploymentTarget {
	DEPLOYMENT_TARGET_BLUE = 0;
	DEPLOYMENT_TARGET_GREEN = 1;
}

message ObjectType {
	string name = 1;
	repeated TypeDirective directives = 2;
	repeated TypeField fields = 3;
}

message TypeDirective {
	string name = 1;
	repeated TypeArgument arguments = 2;
}

message TypeField {
	string name = 1;
	repeated string type = 2;
	repeated TypeDirective directives = 3;
}

message TypeArgument {
	string name = 1;
	string value = 2;
}

message EnumType {
	string name = 1;
	repeated string values = 2;
}

message View {
	string name = 1;
	string sql = 2;
	repeated TypeDirective directives = 3;
	repeated TypeField fields = 4;
}
